--- a/todo.html
+++ b/todo.html
@@ -16,7 +16,7 @@
             </h2>
             <div class="row">
             <input id="input" type="text" placeholder="Type your task here"></input>
-            <button onclick="addTask()" id="add">Add</button>
+            <button onclick="addTask()" id="add">Add</button>    //button for adding tasks
             </div>
             <ul id="todolist">
                 <!-- <li class="checked">Task 1</li>
